update,3 too long named png fixed replaced a gif in home.html

--- a/nano-src/assets/css/contact_us.css
+++ b/nano-src/assets/css/contact_us.css
@@ -333,6 +333,6 @@ input[type="checkbox"] + label {
 }
 [id="checkbox-1"]:checked + label {
     
-    background-image: url(../assets/content_button4_elected.png);
+    background-image: url(../assets/checked.png);
    
 }
